# TensorCL

./: CMakeLists.txt  README.md
assets/OpenCL/: distance_field.c  kernel.c  main.c  ray_marching.c  tensor.c
src/: CLFunction.h  CL_TENSOR.cpp  CL_TENSOR.h  CL_TENSOR_SORT.h  CMakeLists.txt  OpenCL.h  SFML_plot.cpp  SFML_plot.h  Tensor.cpp  Tensor.h  main.cpp
src/CL_TENSOR/: CL_TENSOR.cpp  CL_TENSOR.h  CMakeLists.txt  Optimizer.cpp  Optimizer.h  Tensor.cpp  Tensor.h
src/MD/: AtomFileLoad.cpp  AtomFileLoad.h  CMakeLists.txt  MD.cpp  MD.h
src/OPENCL/: CLFunction.h  CL_SORT.h  CMakeLists.txt  OpenCL.h
src/PLOT/: CMakeLists.txt  SFML_plot.cpp  SFML_plot.h
